# opensync-luizluca

./: APINotes  AUTHORS  CMakeLists.txt  CODING  ChangeLog  Doxyfile.in  INSTALL  README  README-GIT  README-Valgrind  config.h.cmake  libopensync1.pc.in  opensync.sym
cmake/: CMakeLists.txt  OpenSyncDefaults.cmake  OpenSyncPlugin.cmake
docs/examples/applications/: CMakeLists.txt  list_all_formats.c  list_all_groups.c  list_all_plugins.c
docs/examples/applications/src/: CMakeLists.txt  list_all_formats.c  list_all_groups.c
docs/examples/plugins/src/: CMakeLists.txt  external-demo  external_demo.c  external_plugin.c  external_plugin.xml  format.c  plugin-name  plugin.c  simple_plugin.c  simple_plugin_static_caps.c  simple_plugin_static_caps_capabilities.xml  simple_plugin_static_caps_description.xml
docs/whitepaper/: OpenSync.tex  introduction.tex  plugins.tex  synchronization.tex
formats/: CMakeLists.txt  file.c  file.h  plain.c  xmlformat-doc.c  xmlformat.c  xmlformat.h  xmlformat_compare.c
misc/: RELEASE
misc/schemas/: capabilities.xsd  external_plugin_config.xsd  plugin_config.xsd  syncmember.xsd
opensync/: CMakeLists.txt  opensync-archive.h  opensync-capabilities.h  opensync-common.h  opensync-context.h  opensync-db.h  opensync-debug.h  opensync-engine.h  opensync-error.h  opensync-format.h  opensync-helper.h  opensync-ipc.h  opensync-merger.h  opensync-module.h  opensync-plugin.h  opensync-serializer.h  opensync-support.h  opensync-time.h  opensync.h  opensync_error.c  opensync_internals.h  opensync_list.h  opensync_support.c  opensync_support_internals.h  opensync_xml.c
opensync/archive/: opensync_archive.c  opensync_archive_internals.h  opensync_archive_private.h
opensync/capabilities/: opensync-capabilities_internals.h  opensync_capabilities.c  opensync_capabilities.h  opensync_capabilities_internals.h  opensync_capabilities_objtype.c  opensync_capabilities_objtype.h  opensync_capabilities_objtype_internals.h  opensync_capabilities_objtype_private.h  opensync_capabilities_private.h  opensync_capability.c  opensync_capability.h  opensync_capability_internals.h  opensync_capability_private.h
opensync/client/: opensync_client.c  opensync_client.h  opensync_client_internals.h  opensync_client_private.h  opensync_client_proxy.c  opensync_client_proxy_internals.h  opensync_client_proxy_private.h  osplugin.c
opensync/common/: opensync.c  opensync_common_internals.h  opensync_error.c  opensync_error.h  opensync_error_private.h  opensync_file.c  opensync_file.h  opensync_file_internals.h  opensync_list.c  opensync_list.h  opensync_marshal.c  opensync_marshal.h  opensync_marshal_internals.h  opensync_marshal_private.h  opensync_memory.c  opensync_memory.h  opensync_memory_internals.h  opensync_string.c  opensync_string.h  opensync_thread.c  opensync_thread_internals.h  opensync_thread_private.h  opensync_xml.c  opensync_xml_internals.h
opensync/data/: opensync_change.c  opensync_change.h  opensync_data.c  opensync_data.h  opensync_data_internals.h  opensync_data_private.h
opensync/db/: opensync_db.c  opensync_db_internals.h  opensync_db_private.h
opensync/debug/: opensync_trace.c  opensync_trace.h  opensync_trace_private.h
opensync/engine/: opensync_engine.c  opensync_engine.h  opensync_engine_internals.h  opensync_engine_private.h  opensync_mapping_engine.c  opensync_mapping_engine.h  opensync_mapping_engine_internals.h  opensync_mapping_entry_engine.c  opensync_mapping_entry_engine.h  opensync_mapping_entry_engine_internals.h  opensync_obj_engine.c  opensync_obj_engine.h  opensync_obj_engine_internals.h  opensync_sink_engine.c  opensync_sink_engine.h  opensync_sink_engine_internals.h  opensync_status.c  opensync_status_internals.h
opensync/format/: opensync_caps_converter.c  opensync_caps_converter.h  opensync_caps_converter_internals.h  opensync_caps_converter_private.h  opensync_converter.c  opensync_converter.h  opensync_converter_internals.h  opensync_converter_private.h  opensync_filter.c  (+20 more)
tests/: CMakeLists.txt  CTestCustom.cmake  check_error.c  support.c  support.h
tests/abiapi-tests/: check-symbols
tests/archive-tests/: check_archive.c
tests/capabilities-tests/: check_capabilities.c  check_xmlformat.c
tests/client-tests/: check_client.c  check_proxy.c
tests/data-tests/: check_data.c
tests/data/capabilities/: capabilities.xml
tests/data/env_init/: empty_dirs
tests/data/filter_save_and_load/configs/group/1/: syncmember.conf
tests/data/multisync_easy_new/: empty_dirs
tests/data/multisync_multiformats/configs/group/2/: mock-sync.conf  syncmember.conf
tests/data/multisync_multiformats/configs/group/3/: mock-sync.conf  syncmember.conf
tests/data/multisync_multiformats/configs/group/4/: mock-sync.conf
tests/data/multisync_multiformats/data2/: testdata
tests/data/sync/configs/group/1/: mock-sync.no-objtype-error.conf
tests/data/sync_mixed_objtype/configs/group/2/: mock-sync.conf  syncmember.conf
tests/data/xmlformats/: contact.xml  mockobjtype.xml  xmlformat-mockobjtype.xsd
tests/engine-tests/: check_engine.c  check_engine_error.c  check_mapping_engine.c
tests/format-tests/: check_conv.c  check_converter.c  check_detect.c  check_format_env.c  check_objformat.c  check_time.c
tests/group-tests/: check_group.c  check_lock.c  check_member.c  check_updater.c
tests/helper-tests/: check_hash.c
tests/ipc-tests/: check_ipc.c  check_serializer.c
tests/mapping-tests/: check_mapping.c
tests/merger-tests/: check_merger.c  check_xmlformat.c
tests/mock-plugin/: CMakeLists.txt  mock_format.c  mock_sync.c  mock_sync.h
tests/module-tests/: check_module.c
tests/plugin-tests/: check_context.c  check_plugin_config.c
tests/sync-tests/: check_filter.c  check_multisync.c  check_sync.c  check_sync_error.c
tests/version-tests/: check_version.c
tools/: osyncbinary.c  osyncdump.c  osyncplugin.c  osyncstress.c  osynctest.c
wrapper/: CMakeLists.txt  opensync-data.i  opensync-engine.i  opensync-format.i  opensync-group.i  opensync-helper.i  opensync-merger.i  opensync-plugin.i  opensync-version.i  opensync.i
(+130 files in other folders)
