LINK_DIRECTORIES( ${GLIB2_LIBRARY_DIRS} ${LIBXML2_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CHECK_INCLUDE_DIRS} ${GLIB2_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} )

ADD_SUBDIRECTORY( mock-plugin )

#### Contacts ####################################
SET( TICKETURL "https://opensync.org/ticket/" )

########### support #################	
ADD_LIBRARY( support STATIC support.c )
TARGET_LINK_LIBRARIES( support opensync-testing ${CHECK_LIBRARIES} )

############ unit tests ##########################	

SET( TEST_TARGET_LIBRARIES support ) 

ADD_TEST( symbols ${CMAKE_CURRENT_SOURCE_DIR}/abiapi-tests/check-symbols ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} )
ADD_CHECK_TEST( error check_error.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( archive archive-tests/check_archive.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( capabilities capabilities-tests/check_capabilities.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( client client-tests/check_client.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( filter sync-tests/check_filter.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( conv format-tests/check_conv.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( converter format-tests/check_converter.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( datatest data-tests/check_data.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( detect format-tests/check_detect.c ${TEST_TARGET_LIBRARIES} ) 

BUILD_CHECK_TEST( engine engine-tests/check_engine.c ${TEST_TARGET_LIBRARIES} )
OSYNC_TESTCASE( engine engine_new )
OSYNC_TESTCASE( engine engine_init )
OSYNC_TESTCASE( engine engine_sync )
OSYNC_TESTCASE( engine engine_sync_multi_obj )
OSYNC_TESTCASE( engine engine_sync_out_of_order )
OSYNC_TESTCASE( engine engine_sync_reuse )
OSYNC_TESTCASE( engine engine_sync_stress )
OSYNC_TESTCASE( engine engine_sync_read_write )
OSYNC_TESTCASE_DISABLED( engine engine_sync_read_write_stress "994" )
OSYNC_TESTCASE( engine engine_sync_read_write_stress2 )

BUILD_CHECK_TEST( engine-error engine-tests/check_engine_error.c ${TEST_TARGET_LIBRARIES} )
OSYNC_TESTCASE( engine-error engine_error_single_init_error)
OSYNC_TESTCASE( engine-error engine_error_double_init_error)
OSYNC_TESTCASE( engine-error engine_error_no_config_error)
OSYNC_TESTCASE( engine-error engine_error_no_objtype_error)
OSYNC_TESTCASE_DISABLED( engine-error engine_error_dual_connect_error "995")
OSYNC_TESTCASE( engine-error engine_error_one_of_two_connect_error)
OSYNC_TESTCASE( engine-error engine_error_two_of_three_connect_error)
OSYNC_TESTCASE( engine-error engine_error_two_of_three_connect_error2)
OSYNC_TESTCASE( engine-error engine_error_three_of_three_connect_error)
OSYNC_TESTCASE( engine-error engine_error_one_of_three_connect_error)
OSYNC_TESTCASE( engine-error engine_error_no_connect_error)
OSYNC_TESTCASE( engine-error engine_error_single_connect_timeout)
OSYNC_TESTCASE( engine-error engine_error_dual_connect_timeout)
OSYNC_TESTCASE( engine-error engine_error_one_of_three_timeout)
OSYNC_TESTCASE( engine-error engine_error_timeout_and_error)
OSYNC_TESTCASE( engine-error engine_error_single_get_changes_error)
OSYNC_TESTCASE( engine-error engine_error_dual_get_changes_error)
OSYNC_TESTCASE( engine-error engine_error_two_of_three_get_changes_error)
OSYNC_TESTCASE( engine-error engine_error_one_of_three_get_changes_error)
OSYNC_TESTCASE( engine-error engine_error_one_of_three_get_changes_timeouteout)
OSYNC_TESTCASE( engine-error engine_error_get_changes_timeout_and_error)
OSYNC_TESTCASE_DISABLED( engine-error engine_error_get_changes_timeout_sleep "1030")
OSYNC_TESTCASE( engine-error engine_error_single_commit_error)
OSYNC_TESTCASE( engine-error engine_error_dual_commit_error)
OSYNC_TESTCASE( engine-error engine_error_single_commit_timeout)
OSYNC_TESTCASE( engine-error engine_error_dual_commit_timeout)
OSYNC_TESTCASE( engine-error engine_error_commit_timeout_and_error)
OSYNC_TESTCASE( engine-error engine_error_commit_timeout_and_error2)
OSYNC_TESTCASE( engine-error engine_error_commit_error_modify)
OSYNC_TESTCASE( engine-error engine_error_commit_error_delete)
OSYNC_TESTCASE( engine-error engine_error_committed_all_error)
OSYNC_TESTCASE( engine-error engine_error_committed_all_batch_error)
OSYNC_TESTCASE( engine-error engine_error_single_sync_done_error)
OSYNC_TESTCASE( engine-error engine_error_dual_sync_done_error)
OSYNC_TESTCASE( engine-error engine_error_triple_sync_done_error)
OSYNC_TESTCASE( engine-error engine_error_single_sync_done_timeout)
OSYNC_TESTCASE( engine-error engine_error_dual_sync_done_timeout)
OSYNC_TESTCASE( engine-error engine_error_sync_done_timeout_and_error)
OSYNC_TESTCASE( engine-error engine_error_single_disconnect_error)
OSYNC_TESTCASE( engine-error engine_error_dual_disconnect_error)
OSYNC_TESTCASE( engine-error engine_error_triple_disconnect_error)
OSYNC_TESTCASE( engine-error engine_error_single_disconnect_timeout)
OSYNC_TESTCASE( engine-error engine_error_dual_disconnect_timeout)
OSYNC_TESTCASE( engine-error engine_error_disconnect_timeout_and_error)
OSYNC_TESTCASE( engine-error engine_error_get_changes_disconnect_error)
OSYNC_TESTCASE( engine-error engine_error_missing_format_plugin)

ADD_CHECK_TEST( formatenv format-tests/check_format_env.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( group group-tests/check_group.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( hash helper-tests/check_hash.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( lock group-tests/check_lock.c ${TEST_TARGET_LIBRARIES} )

IF (NOT WIN32)
BUILD_CHECK_TEST( ipc ipc-tests/check_ipc.c ${TEST_TARGET_LIBRARIES} )
OSYNC_TESTCASE(ipc ipc_new)
OSYNC_TESTCASE(ipc ipc_ref)
OSYNC_TESTCASE(ipc ipc_create)
OSYNC_TESTCASE(ipc ipc_connect)
OSYNC_TESTCASE(ipc ipc_payload)
OSYNC_TESTCASE(ipc ipc_payload_wait)
OSYNC_TESTCASE(ipc ipc_payload_stress)
OSYNC_TESTCASE(ipc ipc_payload_stress2)
OSYNC_TESTCASE(ipc ipc_large_payload)
OSYNC_TESTCASE(ipc ipc_error_no_pipe)
OSYNC_TESTCASE(ipc ipc_error_perm)
OSYNC_TESTCASE(ipc ipc_error_rem)
OSYNC_TESTCASE(ipc ipc_error_rem2)
OSYNC_TESTCASE(ipc ipc_loop_payload)
OSYNC_TESTCASE(ipc ipc_loop_stress)
OSYNC_TESTCASE(ipc ipc_loop_callback)
OSYNC_TESTCASE(ipc ipc_callback_break)
OSYNC_TESTCASE(ipc ipc_pipes)
OSYNC_TESTCASE(ipc ipc_pipes_stress)
OSYNC_TESTCASE(ipc ipc_callback_break_pipes)
OSYNC_TESTCASE(ipc ipc_timeout)
ENDIF (NOT WIN32)

BUILD_CHECK_TEST( mapping mapping-tests/check_mapping.c ${TEST_TARGET_LIBRARIES} )
OSYNC_TESTCASE(mapping mapping_new)
OSYNC_TESTCASE(mapping mapping_compare)

BUILD_CHECK_TEST( mapping_engine engine-tests/check_mapping_engine.c ${TEST_TARGET_LIBRARIES} )
OSYNC_TESTCASE(mapping_engine mapping_engine_same_similar_conflict)
OSYNC_TESTCASE(mapping_engine mapping_engine_same_similar_conflict_multi)

ADD_CHECK_TEST( member group-tests/check_member.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( module module-tests/check_module.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( multisync sync-tests/check_multisync.c ${TEST_TARGET_LIBRARIES} )

BUILD_CHECK_TEST( sync sync-tests/check_sync.c ${TEST_TARGET_LIBRARIES} )
OSYNC_TESTCASE( sync sync_setup_connect)
OSYNC_TESTCASE( sync sync_easy_new)
OSYNC_TESTCASE( sync sync_easy_new_del)
OSYNC_TESTCASE( sync sync_easy_conflict)
OSYNC_TESTCASE( sync sync_easy_new_mapping)
OSYNC_TESTCASE( sync sync_easy_conflict_duplicate)
OSYNC_TESTCASE( sync sync_easy_conflict_abort)
OSYNC_TESTCASE( sync sync_conflict_duplicate2)
OSYNC_TESTCASE( sync sync_conflict_delay)
OSYNC_TESTCASE( sync sync_conflict_deldel)
OSYNC_TESTCASE( sync sync_moddel)
OSYNC_TESTCASE( sync sync_conflict_moddel)
OSYNC_TESTCASE( sync sync_easy_dualdel)
OSYNC_TESTCASE( sync sync_large)
OSYNC_TESTCASE( sync sync_detect_obj)
OSYNC_TESTCASE( sync sync_detect_obj2)
OSYNC_TESTCASE( sync sync_slowsync_connect)
OSYNC_TESTCASE( sync sync_slowsync_mainsink_connect)
OSYNC_TESTCASE( sync sync_initial_slow_sync)

ADD_CHECK_TEST( sync-error sync-tests/check_sync_error.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( objformat format-tests/check_objformat.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( pluginconfig plugin-tests/check_plugin_config.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( proxy client-tests/check_proxy.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( serializer ipc-tests/check_serializer.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( time format-tests/check_time.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( version version-tests/check_version.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( updater group-tests/check_updater.c ${TEST_TARGET_LIBRARIES} )
ADD_CHECK_TEST( xmlformat capabilities-tests/check_xmlformat.c ${TEST_TARGET_LIBRARIES} )

CONFIGURE_FILE( "${CMAKE_CURRENT_SOURCE_DIR}/CTestCustom.cmake"
		"${CMAKE_BINARY_DIR}/CTestCustom.ctest")
